--- a/announce-server/build.gradle
+++ b/announce-server/build.gradle
@@ -12,6 +12,10 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    compile group: 'io.netty', name: 'netty-handler', version: '4.1.31.Final'
+    compile  project(':annouce-core')
+
 }
 
 test {
